# Noesis

./: .cursorignore  .gitignore  CLAUDE.md  README.md  README.zh-CN.md  eidos.yaml  noesis.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: ISSUES_TEMPLATE.md  architecture.md
eidos/: __init__.py
eidos/core/: __init__.py  config.py  constants.py  types.py
eidos/ingest/: __init__.py  hash_cache.py  local_scanner.py
eidos/parse/: __init__.py  code_parser.py  python_parser.py
eidos/store/: __init__.py  base.py  factory.py  kuzu_store.py  lancedb_store.py  metadata_store.py
noesis/: __init__.py
noesis/core/: __init__.py  config.py  constants.py  types.py
noesis/ingest/: __init__.py  hash_cache.py  local_scanner.py
noesis/parse/: __init__.py  code_entities.py  code_parser.py  doc_parser.py  go_parser.py  python_parser.py  typescript_parser.py
noesis/store/: __init__.py  base.py  factory.py  kuzu_store.py  lancedb_store.py  metadata_store.py
scripts/: init-db.py
tests/: __init__.py  test_code_entities.py  test_code_parsers.py  test_doc_parser.py  test_local_scanner.py  test_placeholder.py
tests/fixtures/parse/: app.tsx  collision.py  guide.md  notes.txt  sample.py  service.go  utils.js
