[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noesis"
version = "0.1.0-alpha"
description = "Local-first, versioned, traceable multimodal knowledge graph OS"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">= 3.11"
authors = [
    { name = "Noesis Contributors" },
]
keywords = ["knowledge-graph", "graphrag", "local-first", "multimodal", "code-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi >= 0.110.0",
    "pydantic >= 2.5.0",
    "pydantic-settings >= 2.1.0",
    "typer >= 0.12.0",
    "sqlalchemy >= 2.0.0",
    "kuzu >= 0.4.0",
    "lancedb >= 0.6.0",
    "tree-sitter >= 0.22.0",
    "tree-sitter-python >= 0.21.0",
    "tree-sitter-javascript >= 0.21.0",
    "tree-sitter-typescript >= 0.21.0",
    "PyMuPDF >= 1.24.0",
    "markdown-it-py >= 3.0.0",
    "Pillow >= 10.0.0",
    "pytesseract >= 0.3.10",
    "fastembed >= 0.3.0",
    "httpx >= 0.27.0",
    "python-dotenv >= 1.0.0",
    "watchdog >= 4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest >= 8.0.0",
    "pytest-asyncio >= 0.23.0",
    "black >= 24.0.0",
    "ruff >= 0.4.0",
    "mypy >= 1.9.0",
]

[project.scripts]
noesis = "noesis.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["noesis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["noesis"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "kuzu.*",
    "lancedb.*",
    "tree_sitter.*",
    "fitz.*",
    "pytesseract.*",
    "fastembed.*",
]
ignore_missing_imports = true
